--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -16,19 +16,19 @@
         </div>
         <button data-all-clear class="span-two">AC</button>
         <button data-delete>DEL</button>
-        <button data-operation style="font-size: 1.75em;">/</button>
+        <button data-operation id="operation">/</button>
         <button data-numbers>1</button>
         <button data-numbers>2</button>
         <button data-numbers>3</button>
-        <button data-operation style="font-size: 1.75em;">*</button>
+        <button data-operation id="operation">*</button>
         <button data-numbers>4</button>
         <button data-numbers>5</button>
         <button data-numbers>6</button>
-        <button data-operation style="font-size: 1.75em;">+</button>
+        <button data-operation id="operation">+</button>
         <button data-numbers>7</button>
         <button data-numbers>8</button>
         <button data-numbers>9</button>
-        <button data-operation style="font-size: 1.75em;">-</button>
+        <button data-operation id="operation">-</button>
         <button data-numbers>.</button>
         <button data-numbers>0</button>
         <button data-equals class="span-two">=</button>
