--- a/index.html
+++ b/index.html
@@ -4,48 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Document</title>
+    <script src="app.js" defer></script>
 </head>
 <body>
-    <div id="nuk"></div>
-    <h1>Contact us Today!</h1>
-    <button id="btnOpenForm">Open Form</button>
-    
-    <div class="form-popup-bg" id="formPopupBg">
-      <div class="form-container">
-        <button id="btnCloseForm" class="close-button">X</button>
-        <h1>Add Book</h1>
-        <form action="index.html" method="get" id="bookInfo">
-          <div class="form-group">
-            <label for="">Book Title</label>
-            <input type="text" class="form-control" name="title" placeholder="Book Title"/>
-          </div>
-          <br/>
-          <div class="form-group">
-            <label for="">Book Author</label>
-            <input class="form-control" type="text" name="author" placeholder="Book Author"/>
-          </div>
-          <br />
-          <div class="form-group">
-            <label for="">Pages</label>
-            <input class="form-control" type="number" name="pages" />
-          </div>
-          <br/>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="read" value="read" id="flexCheckIndeterminate">
-            <label class="form-check-label" for="flexCheckIndeterminate">
-              I have read it!
-            </label>
-          </div>
-          <button type="submit" id="submit">Submit</button>
-        </form>
-      </div>
+    <div class="calculator-grid">
+        <div class="output">
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
+        </div>
+        <button data-all-clear class="span-two">AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation id="operation">/</button>
+        <button data-numbers>1</button>
+        <button data-numbers>2</button>
+        <button data-numbers>3</button>
+        <button data-operation id="operation">*</button>
+        <button data-numbers>4</button>
+        <button data-numbers>5</button>
+        <button data-numbers>6</button>
+        <button data-operation id="operation">+</button>
+        <button data-numbers>7</button>
+        <button data-numbers>8</button>
+        <button data-numbers>9</button>
+        <button data-operation id="operation">-</button>
+        <button data-numbers>.</button>
+        <button data-numbers>0</button>
+        <button data-equals class="span-two">=</button>
     </div>
-<div id="author"></div>
-    <script src="app.js"></script>
-    <script src="form.js"></script>
 </body>
 </html>
